buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
    }
}

apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'com.github.johnrengelman.shadow'

repositories {
    mavenCentral()
    mavenLocal()
    jcenter()

    maven {
        name 'Packet Loss Gaming Repository'
        url 'http://service.packetloss.gg/maven/'
    }
    maven {
        name 'Paper Repository'
        url 'https://papermc.io/repo/repository/maven-public/'
    }
    maven {
        name 'Spigot Repository'
        url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name 'sk89q Repository'
        url 'http://maven.sk89q.com/repo/'
    }
    maven {
        name 'md_5 Repository'
        url 'http://repo.md-5.net/content/repositories/public/'
    }
    maven {
        name 'Comphenix Repository'
        url 'http://repo.comphenix.net/content/groups/public/'
    }
    maven {
        name 'Vault Repository'
        url 'http://nexus.theyeticave.net/content/repositories/pub_releases'
    }
    maven {
        name 'Protocol Lib Repository'
        url 'http://repo.dmulloy2.net/nexus/repository/public/'
    }
    maven {
        name 'minebench-repo'
        url 'https://repo.minebench.de/'
    }
}

dependencies {
    compile group: 'gg.packetloss', name: 'OSBL', version: '1.1-SNAPSHOT'
    compile group: 'com.garbagemule', name: 'mobarena', version: '0.104.3-SNAPSHOT'
    compile group: 'gg.packetloss', name: 'Pitfall', version: '2.1.2'

    compile group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.15.1-R0.1-SNAPSHOT'
    compile group: 'com.destroystokyo.paper', name: 'paper', version: '1.15.1-R0.1-SNAPSHOT'

    compile group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.1.0-SNAPSHOT'
    compile group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '7.0.0-SNAPSHOT'
    compile(group: 'com.sk89q', name: 'commandbook', version: '3.0-SNAPSHOT') {
        exclude group: 'com.sk89q', module: 'worldedit'
    }
    compile(group: 'com.sk89q', name: 'craftbook', version: '3.10.2-SNAPSHOT') {
        exclude group: 'com.sk89q', module: 'worldguard'
        exclude group: 'org.spigotmc', module: 'spigot-api'
        exclude group: 'org.spigotmc', module: 'spigot'
    }

    compile group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.5.0"

    compile group: 'net.milkbowl.vault', name: 'Vault', version: '1.5.6'
    compile group: 'fr.neatmonster', name: 'nocheatplus', version: '3.13.7-RC'
    compile(group: 'de.diddiz', name: 'logblock', version: '1.15.1.1-SNAPSHOT') {
        exclude group: 'com.sk89q', module: 'worldedit'
    }

    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'

    compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
    annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.1.0-SNAPSHOT'
    annotationProcessor "com.google.guava:guava:21.0"

    testCompile group: 'junit', name: 'junit', version: '4.12'
}

tasks.withType(JavaCompile).configureEach {
    it.options.compilerArgs.add("-Aarg.name.key.prefix=")
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
version = '1.0'

artifacts {
    archives shadowJar
}

shadowJar {
    dependencies {
        include(dependency("gg.packetloss:OSBL"))
        relocate ("com.zaxxer.hikari", "gg.packetloss.hikari") {
            include(dependency("com.zaxxer:HikariCP"))
        }
    }
}